--- a/250528/style.css
+++ b/250528/style.css
@@ -1,6 +1,20 @@
-#kiralikCarusel.item img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 8px;
+header{
+    background-color: #ffcccc;
+}
+
+body{
+    background-color: #f1f2f6;
+}
+
+footer{
+    background-color: #ffcccc;
+}
+
+.map-wrapper {
+    max-width: 600px;      /* Orta boyut */
+    margin: 30px auto;     /* Ortaya hizalama */
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
